# sdss_catl_utils

./: .gitignore  .rtd-environment.yml  .travis.yml  CHANGES.rst  MANIFEST.in  README.rst  setup.cfg  setup.py
docs/: conf.py  credits.rst  importing_sdss_catl_utils.rst  index.rst  install.rst  installing_sdss_catl_utils_with_virtual_environment.rst  license.rst  requirements.txt
docs/downloading/: downloading_catls.rst
docs/full_ref_api/: sdss_catl_utils_full_api.rst
docs/quickstart_and_tutorials/: getting_started_overview.rst  index.rst
docs/quickstart_and_tutorials/quickstart_guides/: guide_downloading_catls.rst
docs/sdss_catl_utils/: index.rst
docs/whatsnew/: 0.0.1.rst  0.0.2.rst  0.0.3.rst  index.rst
sdss_catl_utils/: __init__.py  custom_exceptions.py
sdss_catl_utils/mocks_manager/: __init__.py  catl_utils.py  download_manager.py  mocks_defaults.py
sdss_catl_utils/mocks_manager/tests/: test_catl_utils.py  test_download_manager.py
sdss_catl_utils/models/: __init__.py  catl_models.py  catl_models_template.py
sdss_catl_utils/models/tests/: test_catl_models.py  test_download_manager.py
