[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py

[metadata]
package_name = sdss_catl_utils
description = Repository for SDSS DR7 catalogues package
long_description = 
author = Victor Calderon
author_email = victor.calderon@vanderbilt.edu
license = BSD 3-Clause
url = https://github.com/vcalderon2009/sdss_catl_utils
edit_on_github = True
github_project = vcalderon2009/sdss_catl_utils
# install_requires should be formatted as a comma-separated list, e.g.:
# install_requires = astropy, scipy, matplotlib
install_requires = astropy, numpy, pandas, h5py, GitPython, cython, requests, numexpr, scipy, scikit-learn, BeautifulSoup4, wget, tqdm, cosmo-utils
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.0.3
# Note: you will also need to change this in your package's __init__.py
minimum_python_version = 3.6

[entry_points]

# astropy-package-template-example = packagename.example_mod:main

